<resources>
    <string name="app_name">Buildo HR</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="select_category">Select Category</string>
    <string name="projects">Select Project</string>
    <string name="Item">Select Item</string>
    <string name="type">Select Type</string>
    <string name="material">Select Material</string>
    <string name="purpose">Select Purpose</string>
    <string name="payment_type">Select Payment Type</string>
    <string name="payment_mode">Select Payment Mode</string>
    <string name="unit">Select Unit</string>
    <string name="Contractor">Select Contractor</string>
    <string-array name="payment_type"><item>Select Payment Type</item><item>Credit</item><item>Debit</item></string-array>
    <string-array name="issue_type"><item>Select Issue Type</item><item>Chargeable</item><item>Free</item><item>Return</item></string-array>
    <string-array name="payment_mode"><item>Select Payment Mode</item><item>Cash</item><item>Draft</item><item>Cheque</item><item>RTGS</item></string-array>
    <string-array name="units">
        <item>Unit</item>
        <item>mtr</item>
        <item>sqm</item>
        <item>cum</item>
        <item>feet</item>
        <item>sqft</item>
        <item>cuft</item>
        <item>inches</item>
        <item>bag</item>
        <item>pack</item>
        <item>bucket</item>
        <item>ltr</item>
        <item>kg</item>
        <item>box</item>
    </string-array>
    <string-array name="purpose">
        <item>Vendor</item>
        <item>Purchase Order</item>
        <item>Work</item>
        <item>Labour</item>
        <item>Misc</item>
    </string-array>
    <string-array name="status">
        <item>Select Status</item>
        <item>Completed</item>
        <item>Removed</item>
        <item>Ongoing</item>
        <item>Upcoming</item>
    </string-array>

    <string-array name="category_filter">
        <item>Select Category</item>
        <item>Civil</item>
        <item>Structure</item>
    </string-array>
    <string-array name="labour_skill">
        <item>Select Skill Level</item>
        <item>Skilled</item>
        <item>Unskilled</item>
    </string-array>
    <string-array name="absent">
        <item>Select Status</item>
        <item>Absent</item>
        <item>Leave</item>
        <item>Outduty</item>
    </string-array>
    <string-array name="tax_paid">
        <item>W/O Tax</item>
        <item>Tax Paid</item>
    </string-array>
    <string-array name="work_hours">
        <item>Select Work Hours</item>
        <item>8 Hrs</item>
        <item>12 Hrs</item>
    </string-array>
    <string-array name="gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="duration_type">
        <item>Select Duration Type</item>
        <item>Hours</item>
        <item>Days</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>
    <string-array name="activity_status">
        <item>Select Status</item>
        <item>Pending</item>
        <item>Completed</item>
    </string-array>

    <string-array name="acitivity_units">
        <item>Select Unit</item>
        <item>nos</item>
        <item>ft</item>
        <item>m</item>
        <item>sqm</item>
        <item>sqft</item>
        <item>cum</item>
        <item>cuft</item>
    </string-array>
    <string-array name="transfer_status">
        <item>Select Status</item>
        <item>Received</item>
        <item>Rejected</item>
    </string-array>
    <string name="about_us">"BuildnLive is an initiative to simplify people's life by providing an array of personalised services at their fingertips and then at their doorstep.This application is for Architects, Builders and Contractors"</string>
    <string name="select_status">Status</string>
    <string name="profession">Profession</string>
    <string name="select_vendor">Vendor</string>
    <string name="return_item"><u>Return</u></string>
    <string name="return_repair_item"><u>Return/Receive</u></string>


    <string name="service_not_available">Service Not Available</string>
    <string name="invalid_lat_long_used">Invalid Latitude and Longitude</string>
    <string name="no_address_found">No Address Found</string>
    <string name="address_found">Address Found</string>
    <string name="no_geocoder_available">No Geocoder Available</string>
    <string name="receive_impress">Receive Impress</string>
    <string name="balanceAmount">Balance: \u20B9 %1$s</string>
    <string name="percentComplete">%1$s %%</string>
    <string name="receive_imprest">Receive Imprest</string>
    <string name="add">Add</string>
    <string name="date">Date</string>
    <string name="next">Next</string>
    <string name="user">User</string>
    <string name="work">Work</string>
    <string name="labour_requested">Labour Requested</string>
    <string name="home">Home</string>
    <string name="checkin_checkout">Checkin/Checkout</string>
    <string name="take_leave">Take Leave</string>
    <string name="profile">Profile</string>
    <string name="plans">Plans</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>

    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="reason_for_leave">Reason for leave.</string>
    <string name="request_leave">Request Leave</string>
    <string name="leave_dates">Leave Dates</string>
    <string name="status">Status</string>
    <string name="previous_leave_requests">Previous Leave Requests</string>
    <string name="worker_details">Worker Details</string>
    <string name="workerHolder" >%1$s (%2$s)</string>
    <string name="close">Close</string>
    <string name="cancel_leave">Cancel Leave</string>
    <string name="add_new_labour">Add New Labour</string>
    <string name="name">Name</string>
    <string name="add_labour">Add Labour</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="checkout">Checkout</string>
    <string name="checkin">Checkin</string>
    <string name="absent">Absent</string>
    <string name="outduty">Out Duty</string>
    <string name="upto">Up to(In Hrs):</string>
    <string name="select_date">Select Date</string>
    <string name="reason">Reason</string>
    <string name="done">Done</string>
    <string name="mark_ab_od">Mark AB/OD</string>
    <string name="start_kms">Start Kms</string>
    <string name="end_kms">End Kms</string>
    <string name="logout_time">Logout Time</string>
    <string name="hours">Hours</string>
    <string name="login_time">Login Time</string>
    <string name="service_time">Service Time</string>
    <string name="update">Update</string>
    <string name="dateHolder">Date: %1$s</string>
    <string name="no_internet_connection">NO INTERNET CONNECTION</string>
    <string name="oh_snap_we_couldn_t_reach_our_servers_please_check_your_internet_settings">Oh snap! We couldn\'t reach
        our servers, Please check your internet settings.
    </string>
    <string name="internal_server_error">Internal Server Error</string>
    <string name="server_error">Don\'t worry its not your fault. Server may be experiencing some issues, Please contact admin.</string>
    <string name="unknown_error">Unknown Error has occurred, Please Contact Support.</string>
    <string name="http_error">%1$s %2$s</string>
    <string name="error">Request Failed, Please Contact Support.</string>
    <string name="approvals">Approvals</string>
    <string name="item">Item</string>
    <string name="approve">Approve</string>
    <string name="disapprove">Disapprove</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="edit">edit</string>
    <string name="add_payment">Add Payment</string>
    <string name="view_payments">View Payments</string>
    <string name="delete">Delete</string>
    <string name="Rs">\u20B9</string>
    <string name="amount">Amount: \u20B9 %1$s</string>
    <string name="dateLabel">Date: %1$s</string>
    <string name="nameLabel">Name: %1$s</string>
    <string name="vendorLabel">Vendor: %1$s</string>
    <string name="payeeLabel">Payee: %1$s</string>
    <string name="payTypeLabel">Pay Type: %1$s</string>
    <string name="descriptionLabel">Description: %1$s</string>
    <string name="view_purchases">View Purchases</string>
    <string name="purchases">Purchases</string>
    <string name="quantityLabel">"Quantity: %1$s"</string>
    <string name="rateLabel">"Rate: %1$s"</string>
    <string name="taxLabel">"Tax: %1$s"</string>
    <string name="units">Units</string>
    <string name="quantity">Quantity</string>
    <string name="rate">Rate</string>
    <string name="tax_amount">Tax Amount</string>
    <string name="please_fill_details">Please fill details.</string>

    <string name="biometric_title">Authenticate Attendance</string>
    <string name="biometric_subtitle">Approve the update of attendance status</string>
    <string name="biometric_description">Place your finger on the scanner to verify your identity.</string>
    <string name="biometric_negative_button_text">Cancel</string>

    <string name="biometric_error_sdk_not_supported">Sdk version not supported</string>
    <string name="biometric_error_hardware_not_supported">Device does not support biometric authentication</string>
    <string name="biometric_error_fingerprint_not_available">Fingerprint is not registered in device</string>
    <string name="biometric_error_permission_not_granted">Permission is not granted by user</string>
    <string name="biometric_failure">Login not successful!</string>
    <string name="biometric_cancelled">Authentication cancelled by user</string>
    <string name="biometric_success">Login Successful</string>
    <string name="site_payment">Site Payment</string>
    <string name="attendance">Attendance</string>

    <string-array name="taxRate">
        <item>0%</item>
        <item>5%</item>
        <item>12%</item>
        <item>18%</item>
        <item>28%</item>
    </string-array>

</resources>

