<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/checkin_checkout" />
        <item
            android:id="@+id/take_leave"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/take_leave" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_plans"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/plans" />
        <!--<item-->
        <!--android:id="@+id/nav_settings"-->
        <!--android:icon="@drawable/ic_menu_manage"-->
        <!--android:title="Settings" />-->
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <!--<item-->
            <!--android:id="@+id/nav_share"-->
            <!--android:icon="@drawable/ic_menu_share"-->
            <!--android:title="Share" />-->
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_touch_app_black_24dp"
                android:title="@string/about_us" />


        </menu>
    </item>

</menu>
