<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/startDate"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="15sp"
            android:padding="10dp"
            android:background="@drawable/border_round"
            android:textColor="#000000"
            android:text="@string/start_date"/>
        <TextView
            android:id="@+id/endDate"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="15sp"
            android:padding="10dp"
            android:background="@drawable/border_round"
            android:textColor="#000000"
            android:text="@string/end_date"/>
    </LinearLayout>

    <EditText
        android:id="@+id/reasonForLeave"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="3"
        android:scrollbars="vertical"
        android:background="@drawable/border"
        android:hint="@string/reason_for_leave"
        />


    <Button
        android:id="@+id/requestLeave"
        android:layout_gravity="center"
        android:text="@string/request_leave"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:background="@drawable/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/previous_leave_requests"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:padding="5dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/leave_dates"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/status"
            android:layout_weight="1"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

</LinearLayout>