<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_approve_labour_status">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/approve"
            android:textColor="@color/material_green"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/disapprove"
            android:textColor="@color/material_red"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:id="@+id/separator"
        android:layout_below="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/items"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/submit"
        android:layout_below="@+id/separator" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/inactive_button"
        android:text="@string/submit"
        android:textColor="@color/white" />
</RelativeLayout>