<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/name"
            android:textStyle="bold"
            android:layout_weight="0.6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:breakStrategy="high_quality"
            android:padding="10dp"
            tools:text="lorem ipsum" />

        <TextView
            android:id="@+id/date"
            android:textStyle="bold"
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:breakStrategy="high_quality"
            android:padding="10dp"
            tools:text="Date: 24-10-2019" />
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:id="@+id/startKmsContainer"
        android:layout_below="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:padding="10dp"
            android:text="@string/login_time"
            android:gravity="start"
            android:textAlignment="textStart" />


        <TextView
            android:id="@+id/login_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:padding="10dp"
            android:background="@drawable/border"
            android:text="105A"
            android:textAlignment="center"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:padding="10dp"
            android:text="@string/start_kms"
            android:gravity="start"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/startKms"
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:padding="10dp"
            tools:text="1000"
            android:gravity="start"
            android:textAlignment="textStart" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/endKmsContainer"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/startKmsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:padding="10dp"
            android:text="@string/logout_time"
            android:gravity="start"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/logout_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:padding="10dp"
            android:background="@drawable/border"
            android:text="105A"
            android:textAlignment="center"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:padding="10dp"
            android:text="@string/end_kms"
            android:gravity="start"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/endKms"
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:padding="10dp"
            tools:text="1000"
            android:gravity="start"
            android:textAlignment="textStart" />


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:id="@+id/bottomContainer"
        android:layout_below="@+id/endKmsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:padding="10dp"
            android:text="@string/service_time"
            android:gravity="start"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/service_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:padding="3dp"
            android:gravity="center"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/update"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:textColor="@color/white"
            android:background="@drawable/home_button"
            android:text="@string/update" />


    </LinearLayout>

    <TextView
        android:id="@+id/description"
        android:layout_below="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        tools:text="Dummy"
        android:gravity="start"
        android:background="@drawable/border_filled"
        android:textAlignment="textStart" />


</RelativeLayout>